--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <meta charset="utf-8" />
+
+  <title>Grow Into An Octopoda</title>
 
 </head>
 
 <body>
   <main>
   </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+
   <script src="./scripts/aDefGlob_basic.js"></script>
   <script src="./scripts/bDefGlob_character.js"></script>
 
@@ -36,7 +44,7 @@
   <script src="./scripts/setup.js"></script>
   <script src="./scripts/testing_Debug.js"></script>
 
-  <script src=".sketch.js"></script>
+  <script src="sketch.js"></script>
 </body>
 
 </html>
