--- a/index.html
+++ b/index.html
@@ -16,34 +16,33 @@
 </head>
 
 <body>
-  <main>
+  <main class="canvasLocation">
+    <script src="./scripts/aDefGlob_basic.js"></script>
+    <script src="./scripts/bDefGlob_character.js"></script>
+
+    <script src="./classes/Item.js"></script>
+    <script src="./classes/Chara.js"></script>
+    <script src="./classes/Door.js"></script>
+    <script src="./classes/Structures.js"></script>
+
+    <script src="./scenes/ending.js"></script>
+    <script src="./scenes/scene0_born.js"></script>
+    <script src="./scenes/scene1_tut.js"></script>
+    <script src="./scenes/scene2_chlidRoom.js"></script>
+    <script src="./scenes/scene3_childTemple.js"></script>
+    <script src="./scenes/scene4_teenRoom.js"></script>
+    <script src="./scenes/scene5_highschool.js"></script>
+    <script src="./scenes/scene6_college.js"></script>
+    <script src="./scenes/scene7_collegeDorm.js"></script>
+    <script src="./scenes/scene8_gallary.js"></script>
+    <script src="./scenes/scene9_map.js"></script>
+
+    <script src="./scripts/changeScene.js"></script>
+    <script src="./scripts/setup.js"></script>
+    <script src="./scripts/testing_Debug.js"></script>
+
+    <script src="sketch.js"></script>
   </main>
-
-  <script src="./scripts/aDefGlob_basic.js"></script>
-  <script src="./scripts/bDefGlob_character.js"></script>
-
-  <script src="./classes/Item.js"></script>
-  <script src="./classes/Chara.js"></script>
-  <script src="./classes/Door.js"></script>
-  <script src="./classes/Structures.js"></script>
-
-  <script src="./scenes/ending.js"></script>
-  <script src="./scenes/scene0_born.js"></script>
-  <script src="./scenes/scene1_tut.js"></script>
-  <script src="./scenes/scene2_chlidRoom.js"></script>
-  <script src="./scenes/scene3_childTemple.js"></script>
-  <script src="./scenes/scene4_teenRoom.js"></script>
-  <script src="./scenes/scene5_highschool.js"></script>
-  <script src="./scenes/scene6_college.js"></script>
-  <script src="./scenes/scene7_collegeDorm.js"></script>
-  <script src="./scenes/scene8_gallary.js"></script>
-  <script src="./scenes/scene9_map.js"></script>
-
-  <script src="./scripts/changeScene.js"></script>
-  <script src="./scripts/setup.js"></script>
-  <script src="./scripts/testing_Debug.js"></script>
-
-  <script src="sketch.js"></script>
 </body>
 
 </html>
